--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,5 +66,9 @@ nav:
       - Quick Start: getting-started/quickstart.md
   - User Guide:
       - API Server: user-guide/api-server.md
+  - MCP Server:
+      - Quick Start: mcp-quickstart.md
+      - Integration Guide: mcp-integration.md
+      - Implementation: mcp-implementation.md
   - API Reference:
       - REST API: api-reference/rest-api.md
